test/langtools/tools/javac/InterfaceInInner.out
- compiler.warn.source.no.system.modules.path: 15
InterfaceInInner.java:13:13: compiler.err.intf.not.allowed.here
1 error
1 warning
